[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msdecon"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
description = "A python package for isotopic envelope deconvolution in MS data."
readme = "README.md"
license = "MIT"
keywords = ["mass spectrometry", "isotope", "deconvolution"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
python-requires = ">=3.8"
dependencies = [
  "rustworkx>=0.11.0"
]

[project.urls]
"Source" = "https://github.com/your_username/msdecon"
"Documentation" = "https://github.com/your_username/msdecon#readme"

[tool.setuptools]
packages = ["msdecon"]

[tool.setuptools.packages.find]
where = ["src"]
