[build-system]
requires = ["setuptools"]

[project]
name = "msdecon"
version = "0.1.0"
authors = [
  { name = "Patrick", email = "pgarrett@scripps.edu" }
]
description = "A python package for isotopic envelope deconvolution in MS data."
readme = "README.md"
keywords = ["mass spectrometry", "isotope", "deconvolution"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
  "rustworkx"
]

[tool.setuptools]
package-dir = {"" = "src"}
